# solvis-graphql-api

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  MIGRATION_v0.9.md  README.md  package.json  pyproject.toml  requirements.txt  serverless.yml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy-to-aws.yaml  dev.yml  release.yml  run-tests.yml
data_store/: __init__.py  attributes.py  base_data.py  blob_data.py  cloudwatch.py  config.py  data_manager.py  model.py
data_store/test/: test_blob_data.py  test_model.py
solvis_graphql_api/: __init__.py  composite_solution_schema.py  geojson_style.py  handler.py  location_schema.py  logging.yaml  logging_aws.yaml  schema.py  solution_schema.py  solvis_graphql_api.py
solvis_graphql_api/ab_test/: README.md  ab_test.py
solvis_graphql_api/ab_test/client/: dev_schema.py  prod_schema.py
solvis_graphql_api/client/: dev_schema.py  prod_schema.py  test_schema.py
solvis_graphql_api/color_scale/: __init__.py  color_scale.py
solvis_graphql_api/composite_solution/: __init__.py  cached.py  composite_rupture_detail.py  composite_rupture_sections.py  composite_solution.py  composite_solution_schema.py  filter_set_logic_options.py  filtered_ruptures_args.py  helpers.py  schema.py
solvis_graphql_api/data_store/: config.py  model.py
solvis_graphql_api/data_store/test/: test_model.py
solvis_graphql_api/scripts/: ab_test.py  cli.py  cli_ab_test.py
tests/: conftest.py  test_color_scale_api.py  test_color_scale_fn.py  test_composite_corupture_sections.py  test_composite_rupture_sections.py  test_filter_set_options.py  test_filter_set_options_cached.py  test_locations_schema.py  test_rupture_sorting.py  test_rupture_sorting_function.py  test_ruptures_and_pagination.py  test_solvis_composite_solution_api.py  test_solvis_composite_solution_fix_node_id.py  test_solvis_graphql_api.py  test_solvis_location_lists_api.py  test_solvis_locations_api.py  test_solvis_parent_faults_api.py  test_solvis_radii_api.py  test_solvis_solution_faults_api.py
tests/fixtures/: geojson.json  rupture_ids.py
