[tool.poetry]
name = "solvis-graphql-api"
version = "0.9.0"
description = "Graphql API for analysis of opensha modular Inversion Solutions"
authors = ["Chris Chamberlain <chrisbc@artisan.co.nz>"]
license = "AGPL3"
readme = "README.md"

classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
]
packages = [
    {include = "solvis_graphql_api"},
    {include = "data_store"}
]

[tool.poetry.scripts]
cli = 'solvis_graphql_api.scripts.cli:cli'

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-cors = "^6.0"
graphql-server = {extras = ["flask"], version = "3.0.0b7"}
graphene = "^3.3"
pyyaml = "^6.0.1"


nzshm-model = ">=0.6.0"
nzshm-common = ">=0.7.0"
solvis-store = {git = "https://github.com/GNS-Science/solvis-store", rev = "v2.0.5"}
solvis = "^0.12.3"

matplotlib = "^3.7.1"

# see https://github.com/orgs/python-poetry/discussions/7937
# urllib3 = "<2"
# numpy = "<1.25"
# backoff = "^2.2.1"
pynamodb = "^6.0.0"

# GHSA-pq67-6m6q-mj2v
# Cant apply until solvis-store is updated
# urllib3 = "^2.5.0" 

[tool.poetry.group.dev.dependencies]
tox = ">=4.0"
black  = { version = "^24.0"}
isort  = { version = "^5.8.0"}
flake8  = { version = "^7.3.0"}
flake8-docstrings = { version = "^1.7.0", optional = true }
pytest = "^7.4.0"
pytest-cov  = { version = "^2.12.0"}

virtualenv  = { version = "^20.2.2", optional = true}

mkdocs  = { version = "^1.1.2"}
mkdocs-include-markdown-plugin  = { version = "^1.0.0"}
mkdocs-material  = { version = "^6.1.7"}
mkdocs-material-extensions  = { version = "^1.0.1"}
mkdocs-autorefs = {version = "^0.3.1"}
mypy = {version = "^1.10"}

pymdown-extensions = {version = "^10.0"}
mkdocs-pymdownx-material-extras = "^2.0.3"

twine  = { version = "^3.3.0"}

pre-commit = {version = "^2.12.0", optional = true}
toml = {version = "^0.10.2", optional = true}
bump2version = {version = "^1.0.1"}
types-python-dateutil = "^2.8.16"
types-PyYAML = "^6.0.7"
moto = "^4.0.2"

pip = "^25.0"
pip-audit = "^2.9.0"
safety = "^3.6.2"


[tool.poetry.group.doc.dependencies]
mkdocstrings-python = "^1.10.5"

[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs"
    ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
