[project]
name = "solvis-graphql-api"
version = "0.9.2"
description = "The Graphql API for analysis of opensha modular Inversion Solutions."
authors = [
    {name = "Chris B Chamberlain",email = "chrisbc@artisan.co.nz"},
    {name="NSHM Compute Working Group", email="nshm@gns.cri.nz"}
]
readme = "README.md"
requires-python = "^3.12"
license = "AGPL-3.0-or-later"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.12',
]
dependencies = [
    "flask (>=3.0.3)",
    "flask-cors (>=6.0)",
    "graphene (>=3.3)",
    "graphql-server (==3.0.0b7)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "nzshm-common (>=0.9.0,<1.0)",
    "nzshm-model (>=0.14.0,<1.0)",
    "pynamodb (>=6.0.0)",
    "pyyaml (>=6.0.1)",
    "serverless-wsgi (>=3.0)",
    "solvis (>=1.2.0,<2.0 )",
]

packages = [
    {include = "solvis_graphql_api"}
]

[project.scripts]
cli = 'solvis_graphql_api.scripts.cli:cli'
cli_ab_test = 'solvis_graphql_api.scripts.cli_ab_test:cli'

[project.optional-dependencies]
geometry = [
    "shapely",
]

[tool.poetry.group.dev]
optional = true

[dependency-groups]
dev = [
    "black",
    "bump2version",
    "click",
    "deepdiff",
    "flake8-docstrings",
    "flake8",
    "isort",
    "moto",
    "mypy",
    "pip-audit",
    "pip-audit",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "safety",
    "safety",
    "sgqlc",
    "shapely",
    "toml",
    "tox",
    "twine",
    "types-python-dateutil",
    "types-PyYAML",
    "types-toml",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
